--- a/views/home.ejs
+++ b/views/home.ejs
@@ -61,168 +61,32 @@
 
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
-    <div class="container-fluid">
-        <div class="row p-4">
-            <div class="col-lg-6 bg-light p-3">
-                <form action="">
-                    <h3>Add Category</h3>
-                    <label for="">Category Name</label>
-                    <div class="input-group mb-3">
-                        <input type="text" class="form-control" placeholder="Name">
-                    </div>
-                    <label for="">Category Image</label>
-                    <div class="input-group mb-3">
-                        <input type="text" class="form-control" placeholder="Image Url">
-                    </div>
-                    <div>
-                        <button class="btn btn-dark">Submit</button>
-                    </div>
-                </form>
-            </div>
-            <div class="col-lg-6 bg-dark text-white p-3">
-                <form action="">
-                    <h3>Add Brand</h3>
-                    <label for="">Brand Name</label>
-                    <div class="input-group mb-3">
-                        <input type="text" class="form-control" placeholder="Name">
-                    </div>
-                    <label for="">Brand Image</label>
-                    <div class="input-group mb-3">
-                        <input type="text" class="form-control" placeholder="Image Url">
-                    </div>
-                    <div>
-                        <button class="btn btn-light">Submit</button>
-                    </div>
-                </form>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-6 bg-dark text-light p-3">
-                <form action="">
-                    <h3>Add Item</h3>
-                    <label for="name">Item Name</label>
-                    <div class="input-group mb-3">
-                        <input type="text" class="form-control" name="name" placeholder="Name">
-                    </div>
-                    <label for="name">Item Description</label>
-                    <div class="input-group mb-3">
-                        <input type="text" class="form-control" name="name" placeholder="Description">
-                    </div>
-                    <label for="name">Item Category</label>
-                    <div class="input-group mb-3">
-                        <input type="text" class="form-control" name="category" placeholder="Category">
-                    </div>
-                    <label for="name">Item Brand</label>
-                    <div class="input-group mb-3">
-                        <input type="text" class="form-control" name="brand" placeholder="Brand">
-                    </div>
-                    <label for="name">Item Image</label>
-                    <div class="input-group mb-3">
-                        <input type="text" class="form-control" name="brand" placeholder="Brand">
-                    </div>
-                    <label for="name">Item Quantity</label>
-                    <div class="input-group mb-3">
-                        <input type="text" class="form-control" name="brand" placeholder="Brand">
-                    </div>
-                    <label for="name">Item Price</label>
-                    <div class="input-group mb-3">
-                        <input type="text" class="form-control" name="brand" placeholder="Brand">
-                    </div>
-                    <label for="name">Item Size</label>
-                    <div class="input-group mb-3">
-                        <input type="text" class="form-control" name="brand" placeholder="Brand">
-                    </div>
-                    <div class="row">
-                        <div class="col-6">
-                            <button type="submit" class="btn btn-light">Submit</button>
-                        </div>
-                        <div class="col-6 floar-right">
-                            <form action="">
-                                <button class="btn btn-light float-end">View All Items</button>
-                            </form>
-                        </div>
-                    </div>
-                </form>
-            </div>
-            <div class="col-md-6 scroll">
-                <h1>Orders</h1>
-                <div class="card">
-                    <form action="">
-                        <div class="card-header bg-warning text-dark">
-                            Order #01
-                            <p class="card-text float-end">Total Price: $75</p>
-                        </div>
-                        <div class="card-body">
-                            <div class="row">
-                                <div class="col-6">
-                                    <div class="card-title">
-                                        Samosa
+  
+    <form action="">
+        <div class="container-fluid p-5">
+            <div class="row">
+                <div class="col">
+                    <div class="card-body bg-light justify-content-center">
+                        <div class="row">
+                            <div class="col-lg-3">
+                                <img src="../images/1.jpg" alt="" style="display: inline-block; height: 15rem;">
+                                <div class="p-4 text-center">
+                                    <div class="row">
+                                        <div class="col-6">
+                                            <button type="button" id="edit" class="btn btn-warning py-2">Edit</button>
+                                        </div>
+                                        <div class="col-6">
+                                            <button type="submit" disabled id="nextSubmit" class="btn btn-warning py-2">Suubmit</button>
+                                        </div>
                                     </div>
-                                    <p class="card-text">Bhopal</p>
-                                    <p class="card-text">21/04/2024</p>
-                                    <p class="card-text">444-444-44444</p>
-                                    
                                 </div>
-                                <div class="col-6">
-                                    <button type="submit" class="btn btn-primary float-end">See Full Order</button>
-                                </div>
-                                
                             </div>
-                            
                         </div>
-                    </form>
-                    <form action="">
-                        <div class="card-header bg-warning text-dark">
-                            Order #01
-                            <p class="card-text float-end">Total Price: $75</p>
-                        </div>
-                        <div class="card-body">
-                            <div class="row">
-                                <div class="col-6">
-                                    <div class="card-title">
-                                        Samosa
-                                    </div>
-                                    <p class="card-text">Bhopal</p>
-                                    <p class="card-text">21/04/2024</p>
-                                    <p class="card-text">444-444-44444</p>
-                                    
-                                </div>
-                                <div class="col-6">
-                                    <button type="submit" class="btn btn-primary float-end">See Full Order</button>
-                                </div>
-                                
-                            </div>
-                            
-                        </div>
-                    </form>
-                    <form action="">
-                        <div class="card-header bg-warning text-dark">
-                            Order #01
-                            <p class="card-text float-end">Total Price: $75</p>
-                        </div>
-                        <div class="card-body">
-                            <div class="row">
-                                <div class="col-6">
-                                    <div class="card-title">
-                                        Samosa
-                                    </div>
-                                    <p class="card-text">Bhopal</p>
-                                    <p class="card-text">21/04/2024</p>
-                                    <p class="card-text">444-444-44444</p>
-                                    
-                                </div>
-                                <div class="col-6">
-                                    <button type="submit" class="btn btn-primary float-end">See Full Order</button>
-                                </div>
-                                
-                            </div>
-                            
-                        </div>
-                    </form>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
+    </form>
 
 
 
